[tool.poetry]
name = "nsss"
version = "0.1.0"
description = ""
authors = ["Sheldon McGrandle <developer@8cylinder.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.1.7"
platformdirs = "^4.3.6"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
